--- a/intro_react_program/vite-project/src/index.css
+++ b/intro_react_program/vite-project/src/index.css
@@ -1,68 +1,29 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card{
+  border: 1px solid rgba(0, 0, 0, 0.144);
+  border-radius: 10px; /* Rounds the corners */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); /* params: horizontal offset, vertical offset, blur radius, color */
+  padding: 20px; /* pixels between elements and border */
+  margin: 10px; /* pixels between the card and other elements */
+  text-align: center;
+  max-width: 250px; /* max width of entire card */
+  display: inline-block; /* If there are multiple cards, this allows them to be sorted left to right instead of only top to bottom. */
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.card .card-image{
+  max-width: 60%; /* Scale image width with card width */
+  height: auto;
+  border-radius: 5%; /* Rounds the corners of the image */
+  margin-bottom: 10px; /* Adds small margin buffer from bottom of image */ 
 }
 
-body {
+.card .card-title{
+  font-family: Arial, sans-serif; /* First font is displayed. Second font is backup */
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  color: rgba(0, 0, 0, 0.644) /* Font color */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.card .card-text{
+  font-family: Arial, sans-serif;
+  color: rgba(0, 0, 0, 0.664)
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
