Added props to card component and flex positioning to make my personal Unity Experience gallery

--- a/intro_react_program/vite-project/src/Button/Button.module.css
+++ b/intro_react_program/vite-project/src/Button/Button.module.css
@@ -1,4 +1,5 @@
 /* This css file is a module, meaning it must be imported to be applied */
+/* Modules will generate a unique className for elements, which is useful for large projects */
 
 .button{
   background-color: hsl(200,100%,50%);
