--- a/intro_react_program/vite-project/src/index.css
+++ b/intro_react_program/vite-project/src/index.css
@@ -1,29 +1,1 @@
-.card{
-  border: 1px solid rgba(0, 0, 0, 0.144);
-  border-radius: 10px; /* Rounds the corners */
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); /* params: horizontal offset, vertical offset, blur radius, color */
-  padding: 20px; /* pixels between elements and border */
-  margin: 10px; /* pixels between the card and other elements */
-  text-align: center;
-  max-width: 250px; /* max width of entire card */
-  display: inline-block; /* If there are multiple cards, this allows them to be sorted left to right instead of only top to bottom. */
-}
-
-.card .card-image{
-  max-width: 60%; /* Scale image width with card width */
-  height: auto;
-  border-radius: 5%; /* Rounds the corners of the image */
-  margin-bottom: 10px; /* Adds small margin buffer from bottom of image */ 
-}
-
-.card .card-title{
-  font-family: Arial, sans-serif; /* First font is displayed. Second font is backup */
-  margin: 0;
-  color: rgba(0, 0, 0, 0.644) /* Font color */
-}
-
-.card .card-text{
-  font-family: Arial, sans-serif;
-  color: rgba(0, 0, 0, 0.664)
-}
-
+/* index.css is the global CSS file that any component can access */
